rewrite in object-oriented style

--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -31,64 +31,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def parseMetadata(textdir):\n",
-    "    fullpath = 'data/' + textdir + '/metadata/' + textdir + '.xml'\n",
-    "    return lxml.etree.parse(fullpath)"
+    "class BLText: \n",
+    "    \n",
+    "    def __init__(self, textdir): \n",
+    "        self.tree = parseMetadata(textdir)\n",
+    "        self.title = self.getText('//MODS:title')\n",
+    "        self.author = self.getText('//MODS:name[@type=\"personal\"]/MODS:namePart')\n",
+    "        print('Directory: ' + textdir)\n",
+    "        print('Title: ' + self.title)\n",
+    "        print('Author: ' + self.author)\n",
+    "        \n",
+    "    def parseMetadata(self, textdir):\n",
+    "        fullpath = 'data/' + textdir + '/metadata/' + textdir + '.xml'\n",
+    "        return lxml.etree.parse(fullpath)\n",
+    "    \n",
+    "    def getText(self, xpath):\n",
+    "        ns = {'MODS': 'http://www.loc.gov/mods/v3'}\n",
+    "        out = self.tree.xpath(xpath + '/text()', namespaces=ns)\n",
+    "        if isinstance(out, list): \n",
+    "            if len(out) == 1: \n",
+    "                # No sense having a list of length one. Get just the string. \n",
+    "                out = out[0]\n",
+    "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "trees = [parseMetadata(textdir) for textdir in textdirs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def getText(tree, xpath):\n",
-    "    ns = {'MODS': 'http://www.loc.gov/mods/v3'}\n",
-    "    out = tree.xpath(xpath + '/text()', namespaces=ns)\n",
-    "    if isinstance(out, list): \n",
-    "        if len(out) == 1: \n",
-    "            # No sense having a list of length one. Get just the string. \n",
-    "            out = out[0]\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def extractTitleAndAuthor(tree): \n",
-    "    title = getText(tree, '//MODS:title')\n",
-    "    author = getText(tree, '//MODS:name[@type=\"personal\"]/MODS:namePart')\n",
-    "    print('Title: ' + title)\n",
-    "    print('Author: ' + author)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -97,18 +72,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Directory: 003233320\n",
       "Title: Echoes of the War. [In verse.]\n",
       "Author: SALMOND, Charles Adamson.\n",
       "\n",
       "\n",
+      "Directory: 002670581\n",
       "Title: A popular guide to the Geology of the Isle of Wight, with a note on its relation to that of the Isle of Purbeck ... Illustrated, etc\n",
       "Author: NORMAN, Mark William.\n",
       "\n",
       "\n",
+      "Directory: 001718349\n",
       "Title: Die Entwickelung der Stadt Fellin und ihrer Verfassung\n",
       "Author: HOLST, C.\n",
       "\n",
       "\n",
+      "Directory: 000624240\n",
       "Title: Chronicles of Casco Bay. [By D. C. Colesworthy.] no. 1\n",
       "Author: COLESWORTHY, Daniel Clement.\n",
       "\n",
@@ -117,19 +96,10 @@
     }
    ],
    "source": [
-    "for tree in trees: \n",
-    "    extractTitleAndAuthor(tree)\n",
+    "for textdir in textdirs: \n",
+    "    BLText(textdir)\n",
     "    print('\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
