now successfully inits a local git repo and adds files

--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -25,6 +25,7 @@
     "class BLText: \n",
     "    def __init__(self, textdir): \n",
     "        self.textdir = textdir\n",
+    "        self.ID = textdir # alias\n",
     "        self.local_path = 'data/' + textdir\n",
     "        self.tree = self.parseMetadata(textdir)\n",
     "        self.title = self.getTitle()\n",
@@ -54,55 +55,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
     "# A collection of BLText objects. \n",
     "class BLCorpus(): \n",
     "    def __init__(self): \n",
-    "        thisdir = os.listdir()\n",
+    "        self.readDataDir()\n",
+    "        self.makeDataFrame()\n",
     "\n",
+    "    def readDataDir(self): \n",
+    "        thisdir = os.listdir()\n",
+    "        \n",
     "        if 'data' not in thisdir: \n",
     "            raise Exception(\"Can't find data directory.\")\n",
     "\n",
     "        textdirs = os.listdir('data')\n",
     "            \n",
-    "        texts = [ BLText(textdir) for textdir in textdirs ]\n",
+    "        self.texts = [ BLText(textdir) for textdir in textdirs ]\n",
     "        \n",
-    "        self.metadata = [ [ text.textdir, text.title, text.author ] for text in texts ] \n",
+    "        self.metadata = [ [ text.textdir, text.title, text.author ] for text in self.texts ] \n",
+    "    \n",
+    "    def makeDataFrame(self): \n",
+    "        self.df = pd.DataFrame(self.metadata, columns=['ID', 'Title', 'Author'])\n",
     "        \n",
-    "        self.df = pd.DataFrame(self.metadata, columns=['ID', 'Title', 'Author'])"
+    "    def show(self): \n",
+    "        display(self.df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 201,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "003233320\n",
-      "002670581\n",
-      "001718349\n",
-      "000624240\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>003233320</td>\n",
+       "      <td>Echoes of the War. [In verse.]</td>\n",
+       "      <td>SALMOND, Charles Adamson.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002670581</td>\n",
+       "      <td>A popular guide to the Geology of the Isle of ...</td>\n",
+       "      <td>NORMAN, Mark William.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>001718349</td>\n",
+       "      <td>Die Entwickelung der Stadt Fellin und ihrer Ve...</td>\n",
+       "      <td>HOLST, C.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000624240</td>\n",
+       "      <td>Chronicles of Casco Bay. [By D. C. Colesworthy...</td>\n",
+       "      <td>COLESWORTHY, Daniel Clement.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID                                              Title  \\\n",
+       "0  003233320                     Echoes of the War. [In verse.]   \n",
+       "1  002670581  A popular guide to the Geology of the Isle of ...   \n",
+       "2  001718349  Die Entwickelung der Stadt Fellin und ihrer Ve...   \n",
+       "3  000624240  Chronicles of Casco Bay. [By D. C. Colesworthy...   \n",
+       "\n",
+       "                         Author  \n",
+       "0     SALMOND, Charles Adamson.  \n",
+       "1         NORMAN, Mark William.  \n",
+       "2                     HOLST, C.  \n",
+       "3  COLESWORTHY, Daniel Clement.  "
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "c = BLCorpus()"
+    "c = BLCorpus()\n",
+    "c.df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -124,18 +183,17 @@
     "\n",
     "import logging\n",
     "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.DEBUG)"
+    "logger.setLevel(logging.INFO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "IGNORE_FILES = \"\"\n",
     "\n",
     "class CdContext():\n",
     "    \"\"\" A context manager using `sh` to cd to a directory and back\n",
@@ -154,24 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "      \n",
+    "IGNORE_FILES = \"\"\n",
+    "\n",
     "class LocalRepo():\n",
     "\n",
-    "    def __init__(self, bltext):\n",
-    "        self.bltext = bltext\n",
-    "        logging.debug(\"Now attempting to initialize a local git repository for text: \" \n",
-    "                      + self.bltext.ID + \" a.k.a. \" + self.bltext.title )\n",
+    "    def __init__(self, book):\n",
+    "        self.book = book\n",
+    "        logging.info(\"Now attempting to initialize a local git repository for text: \" \n",
+    "                      + self.book.ID + \" a.k.a. \" + self.book.title )\n",
     "\n",
     "    def add_file(self, filename):\n",
-    "        filetype = os.path.splitext(filename)[1]\n",
-    "        if filetype not in IGNORE_FILES:\n",
-    "            sh.git('add', filename)\n",
+    "        sh.git('add', filename)\n",
     "\n",
     "    def add_all_files(self):\n",
     "        with CdContext(self.book.local_path):\n",
@@ -183,7 +240,7 @@
     "            # using sh.ls() instead, this doesn't recognize .gitignore\n",
     "            for _file in sh.ls():\n",
     "                for _subpath in _file.split():\n",
-    "                    logging.debug(\"Adding file: \" + str(_file))\n",
+    "                    logging.info(\"Adding file: \" + str(_file))\n",
     "\n",
     "                    self.add_file(_subpath)\n",
     "\n",
@@ -252,13 +309,65 @@
     "    # Initial commit of book files\n",
     "    local_repo = LocalRepo(book)\n",
     "    local_repo.add_all_files()\n",
-    "    local_repo.commit(\"Initial import from Project Gutenberg\")\n",
+    "    #local_repo.commit(\"Initial import from Project Gutenberg\")\n",
     "\n",
     "    # New files commit\n",
-    "    NewFilesHandler(book)\n",
+    "    #NewFilesHandler(book)\n",
     "\n",
-    "    local_repo.add_all_files()\n",
-    "    local_repo.commit(\"Adds Readme, contributing and license files to book repo\")\n"
+    "    #local_repo.add_all_files()\n",
+    "    #local_repo.commit(\"Adds Readme, contributing and license files to book repo\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.BLText at 0x7fc642a82358>"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testtext = c.texts[0]\n",
+    "testtext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Now attempting to initialize a local git repository for text: 003233320 a.k.a. Echoes of the War. [In verse.]\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git init .' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/ls' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:root:Adding file: ALTO  metadata\n",
+      "\n",
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
+     ]
+    }
+   ],
+   "source": [
+    "make(testtext)"
    ]
   },
   {
