successfully commits new files

--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 205,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +309,7 @@
     "    # Initial commit of book files\n",
     "    local_repo = LocalRepo(book)\n",
     "    local_repo.add_all_files()\n",
-    "    #local_repo.commit(\"Initial import from Project Gutenberg\")\n",
+    "    local_repo.commit(\"Initial import from British Library originals.\")\n",
     "\n",
     "    # New files commit\n",
     "    #NewFilesHandler(book)\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 206,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +331,7 @@
        "<__main__.BLText at 0x7fc642a82358>"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 207,
    "metadata": {
     "collapsed": false
    },
@@ -362,7 +362,9 @@
       "INFO:sh.command:<Command '/usr/sbin/git add AL...(2 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
       "INFO:root:Adding file: ALTO  metadata\n",
       "\n",
-      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
+      "INFO:sh.command:<Command '/usr/sbin/git add me...(6 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n",
+      "INFO:sh.command:<Command '/usr/sbin/git commit...(52 more)' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
      ]
     }
    ],
