--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 208,
    "metadata": {
     "collapsed": false
    },
@@ -26,6 +26,7 @@
     "    def __init__(self, textdir): \n",
     "        self.textdir = textdir\n",
     "        self.ID = textdir # alias\n",
+    "        self.book_id = textdir # another alias. TODO: simplify this\n",
     "        self.local_path = 'data/' + textdir\n",
     "        self.tree = self.parseMetadata(textdir)\n",
     "        self.title = self.getTitle()\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 209,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +150,7 @@
        "3  COLESWORTHY, Daniel Clement.  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 222,
    "metadata": {
     "collapsed": false
    },
@@ -261,24 +262,22 @@
     "    \"\"\" NewFilesHandler - templates and copies additional files to book repos\n",
     "\n",
     "    \"\"\"\n",
-    "    README_FILENAME = 'README.rst'\n",
+    "    README_FILENAME = 'README.md'\n",
     "\n",
     "    def __init__(self, book):\n",
     "        self.book = book\n",
-    "\n",
-    "        package_loader = jinja2.PackageLoader('gitenberg', 'templates')\n",
-    "        self.env = jinja2.Environment(loader=package_loader)\n",
     "\n",
     "    def add_new_files(self):\n",
     "        self.template_readme()\n",
     "        self.copy_files()\n",
     "\n",
     "    def template_readme(self):\n",
-    "        template = self.env.get_template('README.rst.j2')\n",
+    "        templateFile = open('templates/README.md.j2').read()\n",
+    "        template = jinja2.Template(templateFile)\n",
     "        readme_text = template.render(\n",
-    "            title=self.book.meta.title,\n",
-    "            author=self.book.meta.author,\n",
-    "            book_id=self.book.book_id\n",
+    "            title=self.book.title,\n",
+    "            author=self.book.author,\n",
+    "            book_id=self.book.ID\n",
     "        )\n",
     "\n",
     "        readme_path = \"{0}/{1}\".format(\n",
@@ -317,6 +316,40 @@
     "    #local_repo.add_all_files()\n",
     "    #local_repo.commit(\"Adds Readme, contributing and license files to book repo\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-223-6acbb3b0d2c2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mNewFilesHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtesttext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_new_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-222-d4a6f81c5576>\u001b[0m in \u001b[0;36madd_new_files\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0madd_new_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtemplate_readme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtemplate_readme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-222-d4a6f81c5576>\u001b[0m in \u001b[0;36mcopy_files\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     70\u001b[0m         \u001b[1;34m\"\"\" Copy the LICENSE and CONTRIBUTING files to each folder repo \"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m         \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34mu'LICENSE'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mu'CONTRIBUTING.rst'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m         \u001b[0mthis_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mabspath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0m_file\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m             sh.cp(\n",
+      "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "NewFilesHandler(testtext).add_new_files()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
