simplify, start adding other files

--- a/parse-metadata.ipynb
+++ b/parse-metadata.ipynb
@@ -89,6 +89,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sh.command:<Command '/usr/sbin/pwd' call_args {'tty_out': True, 'o...(476 more)>: starting process\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "/home/jon/Dropbox/Research/git-lit"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sh.pwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 210,
    "metadata": {
     "collapsed": false
@@ -260,12 +289,11 @@
     "\n",
     "class NewFilesHandler():\n",
     "    \"\"\" NewFilesHandler - templates and copies additional files to book repos\n",
-    "\n",
     "    \"\"\"\n",
-    "    README_FILENAME = 'README.md'\n",
     "\n",
     "    def __init__(self, book):\n",
     "        self.book = book\n",
+    "        self.add_new_files()\n",
     "\n",
     "    def add_new_files(self):\n",
     "        self.template_readme()\n",
@@ -282,14 +310,14 @@
     "\n",
     "        readme_path = \"{0}/{1}\".format(\n",
     "            self.book.local_path,\n",
-    "            self.README_FILENAME\n",
+    "            'README.md'\n",
     "        )\n",
     "        with codecs.open(readme_path, 'w', 'utf-8') as readme_file:\n",
     "            readme_file.write(readme_text)\n",
     "\n",
     "    def copy_files(self):\n",
     "        \"\"\" Copy the LICENSE and CONTRIBUTING files to each folder repo \"\"\"\n",
-    "        files = [u'LICENSE', u'CONTRIBUTING.rst']\n",
+    "        files = ['LICENSE', 'CONTRIBUTING.md']\n",
     "        this_dir = dirname(abspath(__file__))\n",
     "        for _file in files:\n",
     "            sh.cp(\n",
